# ugv-battery-model

./: README.md
battery-estimator/: battery_model.py  ekf_estimator.py  mock_instrumentation.py  requirements.txt  run_demo.py
battery-estimator/results/: EMU-UGV_heavy_ekf.csv  EMU-UGV_heavy_measurements.csv  EMU-UGV_heavy_summary.csv
current-controller/: compile_commands.json  main.c  tusb_config.h  usb_descriptors.c
data-processing/: analyse-dcir.py  bin_to_hex.py  capture_adc-current.py  capture_adc-voltage.py  dcr-relax.py  decimate-and-extract-1rc.py  extract_pulse.py
voltage-controller/: CMakeLists.txt  compile_commands.json  main.c  usb_descriptors.c
